# task-dispatcher

./: .coveragerc  .gitignore  .prospector.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  __main__.py  build.py  requirements-tests.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
task_dispatcher/: __init__.py  __main__.py  apps.py  celery.py  commands.py  decorators.py  register.py  settings.py
task_dispatcher/management/commands/: task_dispatcher.py
tests/: test_commands.py  test_decorators.py  test_register.py
