[bumpversion]
current_version = 1.4.4
commit = True
tag = True

[metadata]
description-file = README.rst
license-file = LICENSE

[wheel]
universal = 1

[bumpversion:file:task_dispatcher/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:setup.py]
search = version={current_version}
replace = {new_version}

[bumpversion:file:README.rst]
search = :Version: {current_version}
replace = :Version: {new_version}

[tool:pytest]
minversion = 3
addopts = --cov-report=term --cov-report=xml --cov-report=html --cov=task_dispatcher
norecursedirs =
	*settings*
	*urls*
	.tox*
	*docs*

[coverage:run]
source = .
branch = True
omit =
	*__main__.py
	*settings*
	*__init__.py
	*urls*
	.tox*
	*tests*
	*/migrations/*
	*/features/*
	*manage.py
	*wsgi.py
	*celery.py
	*/apps.py
	run*

[coverage:report]
show_missing = True
ignore_errors = True
fail_under = 90
exclude_lines = 
	pragma: no cover
	
	raise AssertionError
	raise NotImplementedError
	
	if 0:
	if __name__ == .__main__.:
	
	def __repr__
	if self\.debug
	if settings\.DEBUG

[coverage:paths]
source = ./

[coverage:html]
directory = .ci_report/coverage_html/

[coverage:xml]
output = .ci_report/coverage.xml

[pep8]
max-line-length = 120

